@startuml

title __TESTPROJU2.APP's Class Diagram__\n

  namespace com.example.testproju2 {
    class com.example.testproju2.BuildConfig {
    }
  }
  

  namespace com.example.testproju2 {
    class com.example.testproju2.MainActivity {
    }
  }
  

  namespace com.example.testproju2 {
    namespace ui.dashboard {
      class com.example.testproju2.ui.dashboard.KalenteriFragment {
      }
    }
  }
  

  namespace com.example.testproju2 {
    namespace ui.home {
      class com.example.testproju2.ui.home.CalendarFormat {
      }
    }
  }
  

  namespace com.example.testproju2 {
    namespace ui.home {
      class com.example.testproju2.ui.home.Counter {
      }
    }
  }
  

  namespace com.example.testproju2 {
    namespace ui.home {
      class com.example.testproju2.ui.home.DoubleCounter {
      }
    }
  }
  

  namespace com.example.testproju2 {
    namespace ui.home {
      class com.example.testproju2.ui.home.HomeFragment {
      }
    }
  }
  

  namespace com.example.testproju2 {
    namespace ui.home {
      class com.example.testproju2.ui.home.MonthsCounter {
      }
    }
  }
  

  namespace com.example.testproju2 {
    namespace ui.home {
      class com.example.testproju2.ui.home.Saving {
      }
    }
  }
  

  namespace com.example.testproju2 {
    namespace ui.notifications {
      class com.example.testproju2.ui.notifications.KulutusFragment {
      }
    }
  }
  

  namespace com.example.testproju2 {
    namespace ui.setting {
      class com.example.testproju2.ui.setting.SettingFragment {
      }
    }
  }
  

  com.example.testproju2.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.testproju2.ui.dashboard.KalenteriFragment -up-|> androidx.fragment.app.Fragment
  com.example.testproju2.ui.home.HomeFragment .up.|> android.widget.AdapterView.OnItemSelectedListener
  com.example.testproju2.ui.home.HomeFragment -up-|> androidx.fragment.app.Fragment
  com.example.testproju2.ui.home.HomeFragment o-- com.example.testproju2.ui.home.DoubleCounter : annokset
  com.example.testproju2.ui.home.HomeFragment o-- com.example.testproju2.ui.home.Counter : kalorit
  com.example.testproju2.ui.home.HomeFragment o-- com.example.testproju2.ui.home.Counter : kplLikoori
  com.example.testproju2.ui.home.HomeFragment o-- com.example.testproju2.ui.home.Counter : kplLonkero
  com.example.testproju2.ui.home.HomeFragment o-- com.example.testproju2.ui.home.Counter : kplOlut
  com.example.testproju2.ui.home.HomeFragment o-- com.example.testproju2.ui.home.Counter : kplSiideri
  com.example.testproju2.ui.home.HomeFragment o-- com.example.testproju2.ui.home.Counter : kplViina
  com.example.testproju2.ui.home.HomeFragment o-- com.example.testproju2.ui.home.Counter : kplViini
  com.example.testproju2.ui.home.HomeFragment o-- com.example.testproju2.ui.home.Counter : kplViski
  com.example.testproju2.ui.home.HomeFragment o-- com.example.testproju2.ui.home.Counter : likooriGrammat
  com.example.testproju2.ui.home.HomeFragment o-- com.example.testproju2.ui.home.Counter : lonkeroGrammat
  com.example.testproju2.ui.home.HomeFragment o-- com.example.testproju2.ui.home.Counter : oluenGrammat
  com.example.testproju2.ui.home.HomeFragment o-- com.example.testproju2.ui.home.CalendarFormat : set
  com.example.testproju2.ui.home.HomeFragment o-- com.example.testproju2.ui.home.Counter : siideriGrammat
  com.example.testproju2.ui.home.HomeFragment o-- com.example.testproju2.ui.home.Counter : viinaGrammat
  com.example.testproju2.ui.home.HomeFragment o-- com.example.testproju2.ui.home.Counter : viiniGrammat
  com.example.testproju2.ui.home.HomeFragment o-- com.example.testproju2.ui.home.Counter : viskiGrammat
  com.example.testproju2.ui.notifications.KulutusFragment .up.|> android.widget.AdapterView.OnItemSelectedListener
  com.example.testproju2.ui.notifications.KulutusFragment -up-|> androidx.fragment.app.Fragment
  com.example.testproju2.ui.notifications.KulutusFragment o-- com.example.testproju2.ui.home.CalendarFormat : set
  com.example.testproju2.ui.setting.SettingFragment -up-|> androidx.fragment.app.Fragment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
